Add annotation calculation and add services for logic store booking and calculation
